# Tataro-BE

./: .env  .gitignore  Dockerfile  README.md  docker-compose.yaml  dump.rdb  manage.py  pyproject.toml  test.sh
.github/workflows/: ci.yml
bankpay/: apps.py  models.py  serializer.py  urls.py  views.py
bankpay/migrations/: 0001_initial.py  0002_bankorders_bankpayments.py  0003_alter_banktransfer_deadline.py
config/: .env.dev  .env.prod  asgi.py  db.sqlite3  urls.py  wsgi.py
config/settings/: __init__.py  base.py  dev.py  prod.py
content/: models.py  pagination.py  serializers.py  urls.py  utils.py
content/migrations/: 0001_initial.py  0002_alter_notice_img_url_alter_notice_order_and_more.py  0003_remove_notification_img_url.py
content/routes/: faq_router.py  notice_router.py  notification_router.py  review_router.py
faq/: models.py  serializers.py  urls.py  views.py
faq/migrations/: 0001_initial.py  (+1 more)
helpers/: apps.py  custom_middleware.py  models.py  pagination.py  utils.py
nginx/: Dockerfile  nginx.conf
notice/: admin.py  models.py  serializers.py  urls.py  views.py
notification/: apps.py  consumers.py  models.py  routing.py  serializers.py  signals.py  urls.py  views.py
order/: models.py  serializers.py  urls.py  views.py
payment/: forms.py  models.py  urls.py  views.py
product/: models.py  serializers.py  urls.py  views.py
review/: models.py  serializers.py  urls.py  views.py
tarot/: admin.py  apps.py  constants.py  models.py  serializers.py  urls.py  util.py  views.py
user/: admin.py  models.py  serializers.py  urls.py  views.py
(+48 files in other folders)
